# kyocera-drivers

./: .clang-tidy  .cmake-format.yaml  CMakeLists.txt  CMakePresets.json  readme.md
.github/: code_of_conduct.md  contributing.md  pull_request_template.md  security.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package.yml  release.yml
cmake/: clang_format-config.cmake  clang_tidy-config.cmake  cpplint-config.cmake  download_kyocera_ppd-config.cmake  kyocera_driversConfig.cmake.in  package-config.cmake
package/: kyocera_drivers.desktop
ppd/: CMakeLists.txt
proprietary/: CMakeLists.txt  wrapper.sh  wrapper.sh.in
src/: CMakeLists.txt
tests/: CMakeLists.txt
