# Configure wrapper so it knows the real install prefix at runtime
set(KYOCERA_CUPS_FILTER_PREFIX "${CMAKE_INSTALL_PREFIX}/${KYOCERA_CUPS_FILTER_DIR}")

configure_file(
    "${CMAKE_CURRENT_LIST_DIR}/wrapper.sh.in"
    "${CMAKE_CURRENT_BINARY_DIR}/rastertokpsl"
    @ONLY
)

install(
    PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/rastertokpsl"
    DESTINATION "${KYOCERA_CUPS_FILTER_DIR}"
    COMPONENT proprietary_runtime
    PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE
)

install(
    PROGRAMS "${CMAKE_CURRENT_LIST_DIR}/rastertokpsl_x86"
    DESTINATION "${KYOCERA_CUPS_FILTER_DIR}"
    COMPONENT proprietary_runtime
    PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE
)

install(
    PROGRAMS "${CMAKE_CURRENT_LIST_DIR}/rastertokpsl_amd64"
    DESTINATION "${KYOCERA_CUPS_FILTER_DIR}"
    COMPONENT proprietary_runtime
    PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE
)
